2009-04-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Debugging.csproj:
	* Mono.Debugging.Client/IDebuggerEngine.cs: Moved
	  IDebuggerEngine to MD.Debugger.

2009-03-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/IDebuggerEngine.cs: Removed unused
	  CanDebugPlatform and rename CanDebugFile to CanDebugCommand.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.mdp:
	* Mono.Debugging.csproj: Migrated to MSBuild file format.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.Debugging.mdp: Flush project format changes.

2009-01-14  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.Debugging.Client/StackFrame.cs: Remove Console.WriteLine noise.

2008-12-19  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Debugging.mdp:
	* Mono.Debugging.Client/StackFrame.cs:
	* Mono.Debugging.Backend/IBacktrace.cs:
	* Mono.Debugging.Client/ObjectValue.cs:
	* Mono.Debugging.Backend/UpdateCallback.cs:
	* Mono.Debugging.Client/ObjectValueFlags.cs:
	* Mono.Debugging.Backend/IObjectValueUpdater.cs:
	* Mono.Debugging.Backend/IObjectValueUpdateCallback.cs: Added support
	for asynchronus evaluation of expressions, with support for timeouts.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/DebuggerSession.cs:
	* Mono.Debugging.Client/IDebuggerEngine.cs:
	* Mono.Debugging.Client/DebuggerFeatures.cs: Improved support for
	checking debugger features.

2008-12-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/ObjectValue.cs:
	* Mono.Debugging.Client/ObjectValueFlags.cs: Added new kind of value:
	not supported.

	* Makefile.am: Fix to better support parallel building.

2008-10-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/ThreadInfo.cs: Added null check.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.mdp: Updated.

2008-09-03  Lluis Sanchez Gual <lluis@novell.com> 
